syntax = "proto3";
package land.gno.gnomobile.v1;

option go_package = "github.com/gnolang/gnomobile/service/rpc";

// messages
message SetRemoteRequest {
	string Remote = 1;
}

message SetRemoteResponse {
}

message SetChainIDRequest {
	string ChainID = 1;
}

message SetChainIDResponse {
}

message SetPasswordRequest {
	string Password = 1;
}

message SetPasswordResponse {
}

message GenerateRecoveryPhraseRequest {
}

message GenerateRecoveryPhraseResponse {
	string Phrase = 1;
}

message DeleteAccountRequest {
	string NameOrBech32 = 1;
	string Password = 2;
}

message DeleteAccountResponse {
}

message QueryRequest {
	string Path = 1;
	bytes Data = 2;
}

message QueryResponse {
	bytes Result = 1;
}

message CallRequest {
	string PackagePath = 1;
	string Fnc = 2;
	repeated string Args = 3;
	string GasFee = 4;
	sint64 GasWanted = 5;
	string Send = 6;
	string Memo = 7;
}

message CallResponse {
	bytes Result = 1;
}